<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bottom_sheet_ayat_theme_rounded"
    android:orientation="vertical"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">
    
    <View
        android:layout_width="50dp"
        android:layout_height="3dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:text="Edit User Account"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/textViewShare"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorView"
        android:id="@+id/viewid"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="@id/textViewShare"
        app:layout_constraintTop_toBottomOf="@id/textViewShare"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
        app:hintTextColor="@color/mtrl_textinput_default_box_stroke_color"
        app:layout_constraintTop_toBottomOf="@id/viewid"
        app:layout_constraintStart_toStartOf="@id/viewid"
        app:layout_constraintEnd_toEndOf="@id/viewid">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nama"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@android:color/black"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
        app:hintTextColor="@color/mtrl_textinput_default_box_stroke_color"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutName"
        app:layout_constraintStart_toStartOf="@id/textInputLayoutName"
        app:layout_constraintEnd_toEndOf="@id/textInputLayoutName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@android:color/black"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        app:passwordToggleEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
        app:hintTextColor="@color/mtrl_textinput_default_box_stroke_color"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutEmail"
        app:layout_constraintStart_toStartOf="@id/textInputLayoutEmail"
        app:layout_constraintEnd_toEndOf="@id/textInputLayoutEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@android:color/black"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPasswordConfirm"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        app:passwordToggleEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
        app:hintTextColor="@color/mtrl_textinput_default_box_stroke_color"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutPassword"
        app:layout_constraintStart_toStartOf="@id/textInputLayoutPassword"
        app:layout_constraintEnd_toEndOf="@id/textInputLayoutPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextPasswordConfirm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password_confirm"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@android:color/black"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButtonSignUp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_shape_purple"
        android:text="Simpan"
        android:textColor="@color/white"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutPasswordConfirm"
        app:layout_constraintStart_toStartOf="@id/textInputLayoutPasswordConfirm"
        app:layout_constraintEnd_toEndOf="@id/textInputLayoutPasswordConfirm"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/appCompatButtonSignUp"
        app:layout_constraintStart_toStartOf="@id/appCompatButtonSignUp"
        app:layout_constraintEnd_toEndOf="@id/appCompatButtonSignUp"/>



</androidx.constraintlayout.widget.ConstraintLayout>